--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 
 	<section class="content">
-		<div class ="img-container">
+		<div class ="imagecontainer">
 			<img src="https://erc.europa.eu/sites/default/files/2023-04/GettyImages-1063723682-cover.jpg" alt="img">
 		</div>
 		<table class="tbl">
